<resources>
    <string name="app_name">HappyFoodDelivery</string>
    <string name="txt_login">Log in to your account</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_forget">Forgot?</string>
    <string name="login">Log in</string>
    <string name="txt_no_account">Don\'t have an account?</string>
    <string name="txt_signup">Sign up</string>
    <string name="txt_create_account">Create your account</string>
    <string name="txt_username">Username</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_terms">By clicking Sign up you agree to the our Terms and Conditions</string>
    <string name="txt_alrdy_account">Already an account?</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_save">Save</string>
    <string name="txt_ur_email">YOUR EMAIL</string>
    <string name="txt_ur_password">YOUR PASSWORD</string>
    <string name="txt_ur_phone">YOUR PHONE</string>
    <string name="txt_city_state">CITY, STATE</string>
    <string name="txt_country">COUNTRY</string>
    <string name="lbl_restaurants">Restaurants</string>
    <string name="lbl_offers">Offers</string>
    <string name="lbl_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_delivering">Delivering to</string>
    <string name="txt_location">Current location</string>
    <string name="txt_search_food">Search foods</string>
    <string name="txt_food">Burgers</string>
    <string name="txt_restaurant_name">Hollywood Starz Cafe</string>
    <string name="txt_deliver_time">20 - 30 mins</string>
    <string name="txt_rating">4.9</string>
    <string name="txt_rating_count">(124 ratings)</string>
    <string name="txt_restaurant_type">Cafe - Western Food - $$</string>
    <string name="txt_popular_choice">Popular Choices</string>
    <string name="txt_showall">Show all</string>
    <string name="fast_burgers">Fast Burgers</string>
    <string name="txt_new_restaurant">New Restaurants</string>
    <string name="txt_restaurant_location">123 Rock Street, New York City</string>
    <string name="txt_price">$0</string>
    <string name="txt_desc">Angus, beef, cheese, onion, tomato jam, pickles</string>
    <string name="txt_popular">Popular</string>
    <string name="txt_order">My Order</string>
    <string name="txt_order_item">Classic Cheese Burger x1</string>
    <string name="txt_add_food">Add more foods</string>
    <string name="txt_instruction">Delivery instructions</string>
    <string name="txt_add_notes">Add notes +</string>
    <string name="txt_subtotal">Subtotal</string>
    <string name="txt_delivery_cost">Delivery Cost</string>
    <string name="txt_free">Free</string>
    <string name="txt_checkout">Check out</string>
    <string name="txt_cart">Go to Cart</string>
    <string name="txt_thank_you">Thank you for your order.</string>
    <string name="txt_track_order">You can track the delivery in the \'Orders\' section.</string>
    <string name="txt_track">Track my order</string>
    <string name="txt_order_again">Order something else</string>
    <string name="txt_create_acc">Create Account</string>
    <string name="txt_with_fb">Continue with Facebook</string>
    <string name="txt_find_food">Find foods you love</string>
    <string name="txt_discover_desc">Discover the best foods from over 1,000 restaurants.</string>
    <string name="txt_fast_delivery">Fast Delivery</string>
    <string name="txt_fast_delivery_desc">Fast delivery to your home, office and wherever you are.</string>
    <string name="txt_live_track">Live Tracking</string>
    <string name="txt_live_track_desc">Real time tracking of your food on the app after ordered.</string>
    <string name="txt_happy_meal">Happy Meals</string>
    <string name="txt_get_started">Get Started</string>
</resources>