<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"/>
    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_create_account"
        android:layout_marginEnd="@dimen/margin_medium_3"
        android:layout_below="@id/ivBack"
        android:textStyle="bold"
        android:layout_toEndOf="@id/ivBack"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_big"/>
    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCreateAccount"
        android:layout_toEndOf="@id/ivBack"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:hint="@string/txt_username"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium"
        android:paddingStart="@dimen/margin_medium_2"
        android:paddingEnd="@dimen/margin_medium"
        android:background="@drawable/rounded_textview_bg"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUserName"
        android:layout_toEndOf="@id/ivBack"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:hint="@string/txt_email"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium"
        android:paddingStart="@dimen/margin_medium_2"
        android:paddingEnd="@dimen/margin_medium"
        android:background="@drawable/rounded_textview_bg"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_toEndOf="@id/ivBack"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium"
        android:paddingStart="@dimen/margin_medium_2"
        android:paddingEnd="@dimen/margin_medium"
        android:background="@drawable/rounded_textview_bg"/>
    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_toEndOf="@id/ivBack"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:hint="@string/txt_phone"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium"
        android:paddingStart="@dimen/margin_medium_2"
        android:paddingEnd="@dimen/margin_medium"
        android:background="@drawable/rounded_textview_bg"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/etPhone"
        android:layout_toEndOf="@id/ivBack"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_large"
        android:textColor="@android:color/white"
        android:text="@string/txt_signup"
        android:background="@drawable/rounded_button_pink"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        android:paddingBottom="@dimen/margin_medium_2"
        android:paddingTop="@dimen/margin_medium_2"
        android:backgroundTint="@color/colorPrimary" />
    <TextView
        android:id="@+id/tvTermsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_terms"
        android:layout_below="@id/btnSignUp"
        android:layout_alignStart="@id/btnSignUp"
        android:layout_alignEnd="@id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_regular"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium_2"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_xlarge">
        <TextView
            android:id="@+id/tvAlrdyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_alrdy_account"
            android:textSize="@dimen/text_regular_2x"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/text_regular_2x"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="@dimen/margin_medium"/>
    </LinearLayout>
</RelativeLayout>