<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/colorBackground">
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"/>
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:layout_below="@id/ivBack"
        android:textStyle="bold"
        android:layout_toEndOf="@id/ivBack"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_big"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLogin"
        android:layout_toEndOf="@id/ivBack"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:hint="@string/txt_email"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium"
        android:paddingStart="@dimen/margin_medium_2"
        android:paddingEnd="@dimen/margin_medium"
        android:background="@drawable/rounded_textview_bg"/>
    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_toEndOf="@id/ivBack">
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_xlarge"
            android:hint="@string/txt_password"
            android:paddingTop="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:paddingBottom="@dimen/margin_medium"
            android:inputType="textPassword"
            android:paddingStart="@dimen/margin_medium_2"
            android:paddingEnd="@dimen/margin_medium"
            android:background="@drawable/rounded_textview_bg"/>
        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_forget"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_xxlarge"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:textSize="@dimen/text_regular_2x"/>
    </FrameLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/fl"
        android:layout_toEndOf="@id/ivBack"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_large"
        android:textColor="@android:color/white"
        android:text="@string/login"
        android:background="@drawable/rounded_button_pink"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        android:paddingBottom="@dimen/margin_medium_2"
        android:paddingTop="@dimen/margin_medium_2"
        android:backgroundTint="@color/colorPrimary" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_medium_3">
        <TextView
            android:id="@+id/tvNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_no_account"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_regular_2x"/>
        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_signup"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_regular_2x"
            android:layout_marginStart="@dimen/margin_medium"
            />
    </LinearLayout>
</RelativeLayout>