<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">
    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2">
        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_regular_3x"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/txt_cancel"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/tvEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_edit_profile"
            android:textSize="@dimen/text_regular_3x"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/tvSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_save"
            android:textSize="@dimen/text_regular_3x"
            android:textColor="@android:color/darker_gray"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xxlarge">
        <com.padcx.happyfooddelivery.CustomImageView
            android:id="@+id/ivProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_profile"
            app:cornerRadius="75dp"/>
        <com.padcx.happyfooddelivery.CustomImageView
            android:id="@+id/ivUpload"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_upload_photo"
            app:cornerRadius="25dp"
            android:layout_alignEnd="@id/ivProfile"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlPhoto"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:layout_marginStart="@dimen/margin_xxlarge"
        android:layout_marginEnd="@dimen/margin_xxlarge">
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ur_email"
            android:textSize="@dimen/text_regular"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEmail"/>
        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ur_password"
            android:layout_below="@id/etEmail"
            android:textSize="@dimen/text_regular"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="@dimen/margin_medium"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPassword"/>
        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_regular"
            android:textColor="@android:color/darker_gray"
            android:layout_below="@id/etPassword"
            android:text="@string/txt_ur_phone"
            android:layout_marginTop="@dimen/margin_medium"/>
        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPhone"/>
        <TextView
            android:id="@+id/tvCityState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_city_state"
            android:textSize="@dimen/text_regular"
            android:textColor="@android:color/darker_gray"
            android:layout_below="@id/etPhone"
            android:layout_marginTop="@dimen/margin_medium"/>
        <EditText
            android:id="@+id/etCityState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCityState"/>
        <TextView
            android:id="@+id/tvCountry"
            android:layout_below="@id/etCityState"
            android:text="@string/txt_country"
            android:textSize="@dimen/text_regular"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCountry"/>
    </RelativeLayout>
</RelativeLayout>