<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_medium_3">
    <ImageView
        android:id="@+id/ivRestaurant"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/restaurant"/>
    <TextView
        android:id="@+id/tvRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_restaurant_name"
        android:layout_below="@id/ivRestaurant"
        android:textSize="@dimen/text_regular_2x"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_small"/>
    <TextView
        android:id="@+id/tvDeliverTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_deliver_time"
        android:background="@drawable/rounded_textview"
        android:textSize="@dimen/text_small"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/black"
        android:layout_alignEnd="@id/ivRestaurant"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_alignBottom="@id/ivRestaurant"
        android:layout_marginBottom="@dimen/margin_medium_2"/>
    <ImageView
        android:id="@+id/ivRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_star_24"
        android:layout_below="@id/tvRestaurant"/>
    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRestaurant"
        android:layout_toEndOf="@id/ivRating"
        android:text="@string/txt_rating"
        android:textSize="@dimen/text_regular"
        android:textColor="@color/colorPrimary"
        android:layout_alignTop="@id/ivRating"
        android:paddingTop="3dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_alignBottom="@id/ivRating"/>
    <TextView
        android:id="@+id/tvRatingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_rating_count"
        android:layout_below="@id/tvRestaurant"
        android:layout_alignTop="@id/tvRating"
        android:layout_alignBottom="@id/tvRating"
        android:layout_toEndOf="@id/tvRating"
        android:textSize="@dimen/text_regular"
        android:textColor="@android:color/darker_gray"
        android:layout_marginStart="@dimen/margin_small"
        android:paddingTop="3dp"/>
    <TextView
        android:id="@+id/tvRestaurantType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_restaurant_type"
        android:layout_below="@id/tvRestaurant"
        android:layout_alignTop="@id/tvRating"
        android:layout_alignBottom="@id/tvRating"
        android:layout_toEndOf="@id/tvRatingCount"
        android:paddingTop="3dp"
        android:textSize="@dimen/text_regular"
        android:textColor="@android:color/darker_gray"
        android:layout_marginStart="@dimen/margin_medium"/>
</RelativeLayout>