<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_layout"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_restaurant_detail">
    <TextView
        android:id="@+id/tvRestaurant"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_restaurant_name"
        android:textSize="@dimen/text_heading_2x"
        android:layout_marginTop="@dimen/margin_medium"
        android:lines="2"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/ivFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_3"
        android:src="@drawable/ic_baseline_favorite_border_24"/>
    <ImageView
        android:id="@+id/ivRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_star_24"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:layout_below="@id/tvRestaurant"/>
    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRestaurant"
        android:layout_toEndOf="@id/ivRating"
        android:text="@string/txt_rating"
        android:textSize="@dimen/text_regular"
        android:textColor="@color/colorPrimary"
        android:layout_alignTop="@id/ivRating"
        android:paddingTop="3dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_alignBottom="@id/ivRating"/>
    <TextView
        android:id="@+id/tvRatingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_rating_count"
        android:layout_below="@id/tvRestaurant"
        android:layout_alignTop="@id/tvRating"
        android:layout_alignBottom="@id/tvRating"
        android:layout_toEndOf="@id/tvRating"
        android:textSize="@dimen/text_regular"
        android:textColor="@android:color/darker_gray"
        android:layout_marginStart="@dimen/margin_small"
        android:paddingTop="3dp"/>
    <TextView
        android:id="@+id/tvRestaurantType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_restaurant_type"
        android:layout_below="@id/tvRestaurant"
        android:layout_alignTop="@id/tvRating"
        android:layout_alignBottom="@id/tvRating"
        android:layout_toEndOf="@id/tvRatingCount"
        android:paddingTop="3dp"
        android:textSize="@dimen/text_regular"
        android:textColor="@android:color/darker_gray"
        android:layout_marginStart="@dimen/margin_medium"/>
    <ImageView
        android:id="@+id/ivLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_location_on_24"
        android:layout_below="@id/ivRating"
        android:layout_marginStart="@dimen/margin_medium_3"/>
    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivRating"
        android:layout_toEndOf="@id/ivLocation"
        android:layout_alignBottom="@id/ivLocation"
        android:layout_marginStart="@dimen/margin_small"
        android:textSize="@dimen/text_regular"
        android:textColor="@android:color/darker_gray"
        android:paddingTop="3dp"
        android:text="@string/txt_restaurant_location"/>
    <RelativeLayout
        android:id="@+id/rlPopular"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvLocation"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:background="@drawable/rounded_layout_gray">
        <TextView
            android:id="@+id/tvPopularChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_regular_3x"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:text="@string/txt_popular_choice"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopularChoices"
            android:layout_below="@id/tvPopularChoice"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:listitem="@layout/popular_food_list"/>
        <TextView
            android:id="@+id/tvFoodType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rvPopularChoices"
            android:textSize="@dimen/text_regular_3x"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/txt_food"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:layout_marginStart="@dimen/margin_medium_2"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFoodList"
            android:layout_below="@id/tvFoodType"
            tools:listitem="@layout/food_list"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_regular"
            android:background="@drawable/rounded_button_pink"
            android:layout_below="@id/rvFoodList"
            android:textColor="@android:color/white"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/txt_cart"/>
    </RelativeLayout>
</RelativeLayout>